pulldown-cmark-mdcat/tests/snapshots/render/dumb@commonmark-spec-574-images.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 122
expression: "render_to_string(markdown_file, &dumb_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/574-images.md
---
foo bar[1][2]

[1]: /url
[2]: /url2
